--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,5 +1,5 @@
 project = "your_project_id"
-public_key_path = "~/.ssh/id_rsa.pub"
-private_key_path = "~/.ssh/id_rsa"
+public_key_path = "~/.ssh/appuser.pub"
+private_key_path = "~/.ssh/appuser"
 disk_image = "reddit-base"
 zone = "europe-west1-b"
