--- a/packer/app.json
+++ b/packer/app.json
@@ -2,14 +2,14 @@
 	"variables": {
 		"project_id": "",
 		"source_image_family": "",
-		"machine_type": "f1-small"
+		"machine_type": "g1-small"
   		},
 	"builders": [
 		{
 		"type": "googlecompute",
 		"project_id": "{{user `project_id`}}",
 		"image_name": "reddit-base-{{timestamp}}",
-		"image_family": "reddit-base",
+		"image_family": "reddit-app-base",
 		"source_image_family": "{{user `source_image_family`}}",
 		"zone": "europe-west1-b",
 		"ssh_username": "appuser",
@@ -18,6 +18,9 @@
 		"disk_size": "10",
 		"disk_type": "pd-standard",
 		"network": "default",
+		"metadata": {
+			"block-project-ssh-keys": "false"
+		},
 		"tags": [ "puma-server" ] 
 		}
 	],
@@ -25,11 +28,6 @@
 		{
 		"type": "shell",
 		"script": "scripts/install_ruby.sh",
-		"execute_command": "sudo {{.Path}}"
-		},
-		{
-		"type": "shell",
-		"script": "scripts/install_mongodb.sh",
 		"execute_command": "sudo {{.Path}}"
 		}
 	]
