--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory.json
+interpreter_python = /usr/bin/python3
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
