ansible HW 8 fix 03

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory.json
+inventory = ./inventory.yml
 interpreter_python = /usr/bin/python3
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
