--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 gather_facts = false
+remote_tmp = /tmp/.ansible-${USER}/tmp
 inventory = ./inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
