--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,15 @@
 [defaults]
 gather_facts = false
 remote_tmp = /tmp/.ansible-${USER}/tmp
-inventory = ./inventory
+inventory = ./environments/stage/inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
+
