--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -7,6 +7,7 @@ private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
 roles_path = ./roles
+vault_password_file = vault.key
 
 [diff]
 # Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
