--- a/ansible/roles/db/meta/main.yml
+++ b/ansible/roles/db/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your description
+  author: Anton Cherenkov
+  description: Ansible role for mongodb configuration
   company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -49,5 +49,4 @@ galaxy_info:
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
-  
+  # if you add dependencies to this list. 
