--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -13,6 +13,7 @@
     dest: /home/appuser/db_config
     owner: appuser
     group: appuser
+  notify: restart puma
 
 - name: enable puma
   systemd: name=puma enabled=yes
