ansible-4 hw done try 01

--- a/packer/app.json
+++ b/packer/app.json
@@ -28,7 +28,9 @@
 		{
 		"type": "ansible",
 		"playbook_file": "ansible/playbooks/packer_app.yml",
-		"user": "appuser"
+		"user": "appuser",
+		"extra_arguments": ["--tags","app"],
+		"ansible_env_vars": ["ANSIBLE_ROLES_PATH={{ pwd }}/ansible/roles"]
 		}
 	]
 }
