--- a/ansible/playbooks/packer_app.yml
+++ b/ansible/playbooks/packer_app.yml
@@ -2,15 +2,17 @@
 - name: Install Ruby && Bundler
   hosts: all
   become: yes
-  tasks:
-  - name: Apt cache update
-    apt:
-      update_cache: true
-  # Установим в цикле все зависимости
-  - name: Install ruby and rubygems and required packages
-    apt: "name={{ item }} state=present"
-    with_items:
-      - ruby-full
-      - ruby-bundler
-      - build-essential
-
+  roles:
+    - role: app
+#  tasks:
+#  - name: Apt cache update
+#    apt:
+#      update_cache: true
+#  # Установим в цикле все зависимости
+#  - name: Install ruby and rubygems and required packages
+#    apt: "name={{ item }} state=present"
+#    with_items:
+#      - ruby-full
+#      - ruby-bundler
+#      - build-essential
+#
